initialisation TP CV Mitchum

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,93 @@ HTML/49 structure d'un site/ressources/logoLion.JPG
 HTML/49 structure d'un site/ressources/logoPanda.JPG
 HTML/49 structure d'un site/ressources/logoRhino.JPG
 all/all.zip
+HTML/énoncés/all.zip
+HTML/énoncés/slide 17 - premières balises/instructions.md
+HTML/énoncés/slide 17 - premières balises/liens.md
+HTML/énoncés/slide 17 - premières balises/maquette.png
+HTML/énoncés/slide 28 - niveaux de titres/instructions.md
+HTML/énoncés/slide 28 - niveaux de titres/liens.md
+HTML/énoncés/slide 28 - niveaux de titres/maquette.png
+HTML/énoncés/slide 28 - niveaux de titres/textes.txt
+HTML/énoncés/slide 30 - br et hr/instructions.md
+HTML/énoncés/slide 30 - br et hr/liens.md
+HTML/énoncés/slide 30 - br et hr/maquette.png
+HTML/énoncés/slide 30 - br et hr/textes.txt
+HTML/énoncés/slide 32 - mots-clés/instructions.md
+HTML/énoncés/slide 32 - mots-clés/liens.md
+HTML/énoncés/slide 32 - mots-clés/maquette.png
+HTML/énoncés/slide 32 - mots-clés/textes.txt
+HTML/énoncés/slide 38 - listes/instructions.md
+HTML/énoncés/slide 38 - listes/liens.md
+HTML/énoncés/slide 38 - listes/maquette.png
+HTML/énoncés/slide 38 - listes/textes.txt
+HTML/énoncés/slide 45 - liens/instructions.md
+HTML/énoncés/slide 45 - liens/liens.md
+HTML/énoncés/slide 45 - liens/maquette.png
+HTML/énoncés/slide 45 - liens/textes.txt
+HTML/énoncés/slide 45 - liens/img/abeille.jpg
+HTML/énoncés/slide 47 - images/instructions.md
+HTML/énoncés/slide 47 - images/liens.md
+HTML/énoncés/slide 47 - images/maquette.png
+HTML/énoncés/slide 47 - images/textes.txt
+HTML/énoncés/slide 47 - images/img/website.jpg
+HTML/énoncés/slide 49 - structure d'un site/readMe - structure d'un site HTML.pdf
+HTML/énoncés/slide 53 - fusionner les cellules d'un tableau/index..html
+HTML/énoncés/slide 53 - fusionner les cellules d'un tableau/readMe - fusionner les cellules d'un tableau.pdf
+HTML/énoncés/slide 54 - faire une signature html à l'aide des tableaux/readMe - faire un signature html à l'aide des tableaux.pdf
+HTML/énoncés/slide 58 - select, option et optgroup/readMe - select, option et optgroup.pdf
+HTML/énoncés/slide 59 - les méthodes get et post/index.html
+HTML/énoncés/slide 59 - les méthodes get et post/readMe - les méthodes get et post.pdf
+HTML/énoncés/slide 62 - création d'un formulaire simple/readMe - création d'un formulaire simple.pdf
+HTML/énoncés/slide 69 - faire le snippet de votre formulaire/readMe - faire le snippet de votre formulaire.pdf
+HTML/énoncés/slide 81 - intégrer une vidéo youtube/readMe - intégrer un vidéo youtube.pdf
+HTML/énoncés/slide 81 - intégrer une vidéo youtube/video.html
+HTML/énoncés/slide 86 - exemple - les images SVG/index.html
+CSS/énoncés/slide 14 - hello world/instructions.md
+CSS/énoncés/slide 14 - hello world/liens.md
+CSS/énoncés/slide 14 - hello world/maquette.png
+CSS/énoncés/slide 14 - hello world/textes.txt
+CSS/énoncés/slide 14 - hello world/img/css3.png
+CSS/énoncés/slide 14 - hello world/img/html5.png
+CSS/énoncés/slide 14 - hello world/img/logo.jpg
+CSS/énoncés/slide 15 - sélecteurs relatifs/index.html
+CSS/énoncés/slide 15 - sélecteurs relatifs/readMe.md
+CSS/énoncés/slide 16 - sélecteurs d'attributs/index.html
+CSS/énoncés/slide 16 - sélecteurs d'attributs/readMe.md
+CSS/énoncés/slide 19 - pseudo-classes & pseudo-éléments/index.html
+CSS/énoncés/slide 19 - pseudo-classes & pseudo-éléments/readMe.md
+CSS/énoncés/slide 23 - inline et block/index.html
+CSS/énoncés/slide 23 - inline et block/readMe.md
+CSS/énoncés/slide 27 - @font-face/index.html
+CSS/énoncés/slide 27 - @font-face/readMe.md
+CSS/énoncés/slide 27 - @font-face/font/MaSuperPolice.ttf
+CSS/énoncés/slide 28 - Google Font/index.html
+CSS/énoncés/slide 28 - Google Font/readMe.md
+CSS/énoncés/slide 42 - modèle de boite/index.html
+CSS/énoncés/slide 42 - modèle de boite/readMe.md
+CSS/énoncés/slide 43 - box-sizing/index.html
+CSS/énoncés/slide 43 - box-sizing/readMe.md
+CSS/énoncés/slide 45 - display - exemple/index.html
+CSS/énoncés/slide 45 - display - exemple/style.css
+CSS/énoncés/slide 46 - display inline-block - exemple/index.html
+CSS/énoncés/slide 46 - display inline-block - exemple/style.css
+CSS/énoncés/slide 47 - position - exemple/index.html
+CSS/énoncés/slide 47 - position - exemple/reset.css
+CSS/énoncés/slide 47 - position - exemple/style.css
+CSS/énoncés/slide 49 - float & clear - exemple/index.html
+CSS/énoncés/slide 49 - float & clear - exemple/style.css
+CSS/énoncés/slide 50 - overflow - exemple/index.html
+CSS/énoncés/slide 50 - overflow - exemple/style.css
+CSS/énoncés/slide 51 - centrer en css - exemple/index.html
+CSS/énoncés/slide 51 - centrer en css - exemple/style.css
+CSS/énoncés/slide 53 - Sprite/index.html
+CSS/énoncés/slide 53 - Sprite/social-sprite.png
+CSS/énoncés/slide 56-65 - FlexBox - exemple/index.html
+CSS/énoncés/slide 56-65 - FlexBox - exemple/social-sprite.png
+CSS/énoncés/slide 56-65 - FlexBox - exemple/style.css
+CSS/énoncés/slide 67-74 - grid layout - exemple/index.html
+CSS/énoncés/slide 67-74 - grid layout - exemple/style.css
+CSS/énoncés/slide 75-80 - grid layout - exemple/index.html
+CSS/énoncés/slide 75-80 - grid layout - exemple/style.css
+CSS/énoncés/slide 81 - @media-screen/index.html
+CSS/énoncés/slide 81 - @media-screen/readMe.md
