Modification icones + form

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,7 @@ CSS/énoncés/slide 75-80 - grid layout - exemple/index.html
 CSS/énoncés/slide 75-80 - grid layout - exemple/style.css
 CSS/énoncés/slide 81 - @media-screen/index.html
 CSS/énoncés/slide 81 - @media-screen/readMe.md
+HTML/énoncés/TP1 - Ecrire le fichier html de ce schéma du DOM.pdf
+CSS/TP 2 - Maquette Golden/docs/img.zip
+CSS/TP 2 - Maquette Golden/docs/Golden-One Page Web Template - flex integration.png
+CSS/TP 2 - Maquette Golden/docs/Golden-One Page Web Template - flex integration.psd
