--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,92 @@ SASS/2. footer-sass/node_modules/to-regex-range/index.js
 SASS/2. footer-sass/node_modules/to-regex-range/LICENSE
 SASS/2. footer-sass/node_modules/to-regex-range/package.json
 SASS/2. footer-sass/node_modules/to-regex-range/README.md
+SASS/TRANS/node_modules/.package-lock.json
+SASS/TRANS/node_modules/.bin/sass
+SASS/TRANS/node_modules/.bin/sass.cmd
+SASS/TRANS/node_modules/.bin/sass.ps1
+SASS/TRANS/node_modules/anymatch/index.d.ts
+SASS/TRANS/node_modules/anymatch/index.js
+SASS/TRANS/node_modules/anymatch/LICENSE
+SASS/TRANS/node_modules/anymatch/package.json
+SASS/TRANS/node_modules/anymatch/README.md
+SASS/TRANS/node_modules/binary-extensions/binary-extensions.json
+SASS/TRANS/node_modules/binary-extensions/binary-extensions.json.d.ts
+SASS/TRANS/node_modules/binary-extensions/index.d.ts
+SASS/TRANS/node_modules/binary-extensions/index.js
+SASS/TRANS/node_modules/binary-extensions/license
+SASS/TRANS/node_modules/binary-extensions/package.json
+SASS/TRANS/node_modules/binary-extensions/readme.md
+SASS/TRANS/node_modules/braces/CHANGELOG.md
+SASS/TRANS/node_modules/braces/index.js
+SASS/TRANS/node_modules/braces/LICENSE
+SASS/TRANS/node_modules/braces/package.json
+SASS/TRANS/node_modules/braces/README.md
+SASS/TRANS/node_modules/braces/lib/compile.js
+SASS/TRANS/node_modules/braces/lib/constants.js
+SASS/TRANS/node_modules/braces/lib/expand.js
+SASS/TRANS/node_modules/braces/lib/parse.js
+SASS/TRANS/node_modules/braces/lib/stringify.js
+SASS/TRANS/node_modules/braces/lib/utils.js
+SASS/TRANS/node_modules/chokidar/index.js
+SASS/TRANS/node_modules/chokidar/LICENSE
+SASS/TRANS/node_modules/chokidar/package.json
+SASS/TRANS/node_modules/chokidar/README.md
+SASS/TRANS/node_modules/chokidar/lib/constants.js
+SASS/TRANS/node_modules/chokidar/lib/fsevents-handler.js
+SASS/TRANS/node_modules/chokidar/lib/nodefs-handler.js
+SASS/TRANS/node_modules/chokidar/types/index.d.ts
+SASS/TRANS/node_modules/fill-range/index.js
+SASS/TRANS/node_modules/fill-range/LICENSE
+SASS/TRANS/node_modules/fill-range/package.json
+SASS/TRANS/node_modules/fill-range/README.md
+SASS/TRANS/node_modules/glob-parent/CHANGELOG.md
+SASS/TRANS/node_modules/glob-parent/index.js
+SASS/TRANS/node_modules/glob-parent/LICENSE
+SASS/TRANS/node_modules/glob-parent/package.json
+SASS/TRANS/node_modules/glob-parent/README.md
+SASS/TRANS/node_modules/is-binary-path/index.d.ts
+SASS/TRANS/node_modules/is-binary-path/index.js
+SASS/TRANS/node_modules/is-binary-path/license
+SASS/TRANS/node_modules/is-binary-path/package.json
+SASS/TRANS/node_modules/is-binary-path/readme.md
+SASS/TRANS/node_modules/is-extglob/index.js
+SASS/TRANS/node_modules/is-extglob/LICENSE
+SASS/TRANS/node_modules/is-extglob/package.json
+SASS/TRANS/node_modules/is-extglob/README.md
+SASS/TRANS/node_modules/is-glob/index.js
+SASS/TRANS/node_modules/is-glob/LICENSE
+SASS/TRANS/node_modules/is-glob/package.json
+SASS/TRANS/node_modules/is-glob/README.md
+SASS/TRANS/node_modules/is-number/index.js
+SASS/TRANS/node_modules/is-number/LICENSE
+SASS/TRANS/node_modules/is-number/package.json
+SASS/TRANS/node_modules/is-number/README.md
+SASS/TRANS/node_modules/normalize-path/index.js
+SASS/TRANS/node_modules/normalize-path/LICENSE
+SASS/TRANS/node_modules/normalize-path/package.json
+SASS/TRANS/node_modules/normalize-path/README.md
+SASS/TRANS/node_modules/picomatch/CHANGELOG.md
+SASS/TRANS/node_modules/picomatch/index.js
+SASS/TRANS/node_modules/picomatch/LICENSE
+SASS/TRANS/node_modules/picomatch/package.json
+SASS/TRANS/node_modules/picomatch/README.md
+SASS/TRANS/node_modules/picomatch/lib/constants.js
+SASS/TRANS/node_modules/picomatch/lib/parse.js
+SASS/TRANS/node_modules/picomatch/lib/picomatch.js
+SASS/TRANS/node_modules/picomatch/lib/scan.js
+SASS/TRANS/node_modules/picomatch/lib/utils.js
+SASS/TRANS/node_modules/readdirp/index.d.ts
+SASS/TRANS/node_modules/readdirp/index.js
+SASS/TRANS/node_modules/readdirp/LICENSE
+SASS/TRANS/node_modules/readdirp/package.json
+SASS/TRANS/node_modules/readdirp/README.md
+SASS/TRANS/node_modules/sass/LICENSE
+SASS/TRANS/node_modules/sass/package.json
+SASS/TRANS/node_modules/sass/README.md
+SASS/TRANS/node_modules/sass/sass.dart.js
+SASS/TRANS/node_modules/sass/sass.js
+SASS/TRANS/node_modules/to-regex-range/index.js
+SASS/TRANS/node_modules/to-regex-range/LICENSE
+SASS/TRANS/node_modules/to-regex-range/package.json
+SASS/TRANS/node_modules/to-regex-range/README.md
